log

Thu 14 Mar 2024 08:42:32 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
71de774
Thu 14 Mar 2024 08:42:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
f318faa
Thu 14 Mar 2024 08:48:58 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 20/70
1ef67ce
Thu 14 Mar 2024 08:54:05 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
9047fbe
Thu 14 Mar 2024 08:55:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   55 |   return *newArr;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3a73f9f
Thu 14 Mar 2024 08:55:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
0e7b69d
Thu 14 Mar 2024 08:58:55 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
6173816
Thu 14 Mar 2024 09:01:47 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|4
total_score: 30/70
5582921
Thu 14 Mar 2024 09:06:21 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
96f93e6
Thu 14 Mar 2024 09:09:28 PM UTC: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|4
total_score: 30/70
ff37869
Thu 14 Mar 2024 09:19:58 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
2a55376
Fri 15 Mar 2024 12:48:38 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|4
total_score: 30/70
7321d0c
Fri 15 Mar 2024 12:49:19 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
d1ff4e9
Fri 15 Mar 2024 12:51:09 AM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
2170fb1
Fri 15 Mar 2024 12:51:21 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
b1ba242
Fri 15 Mar 2024 01:48:55 AM UTC: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
8e24392
Fri 15 Mar 2024 01:49:36 AM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|3
total_score: 40/70
7765910
Fri 15 Mar 2024 01:50:04 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
b72d424
Fri 15 Mar 2024 01:50:54 AM UTC: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|2
total_score: 50/70
d642abd
Fri 15 Mar 2024 01:51:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
edff0d0
Fri 15 Mar 2024 01:51:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
bd92a14
Fri 15 Mar 2024 02:09:03 AM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|2
total_score: 50/70
b4ffb1f
Fri 15 Mar 2024 12:59:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
7cd3803
Fri 15 Mar 2024 01:24:59 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
ff58d09
Fri 15 Mar 2024 01:25:33 PM UTC: 
 exercises.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  0|1
total_score: 60/70
7a13ce4
Fri 15 Mar 2024 01:27:06 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|3
total_score: 40/70
2f2d883
Fri 15 Mar 2024 01:27:22 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
ad9e1fe
Fri 15 Mar 2024 01:28:29 PM UTC: 
 exercises.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  0|1
total_score: 60/70
1ce6943
Fri 15 Mar 2024 01:28:58 PM UTC: 
 exercises.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  0|1
total_score: 60/70
2e0add9
